BRoster: dereference symlinks when building RosterAppInfo

Should fix #15313

Change-Id: Ibd1d4f4195d794841ecddf3534177982cf894bcb
Reviewed-on: https://review.haiku-os.org/c/haiku/+/1803
Reviewed-by: waddlesplash <waddlesplash@gmail.com>